After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723702 - Crash when rating software
Crash when rating software
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.11.x
Other Linux
: Normal critical
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-02-05 17:29 UTC by Michael Catanzaro
Modified: 2014-02-25 14:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtrace (24.34 KB, text/plain)
2014-02-05 17:29 UTC, Michael Catanzaro
Details

Description Michael Catanzaro 2014-02-05 17:29:34 UTC
Created attachment 268193 [details]
backtrace

I was rating software on my system. I was able to rate GNOME Robots just fine, then tried to rate Seahorse, but Software crashed. I then reopened Software and was able to rate Seahorse without issue.  Backtrace is attached.

(gnome-software:12015): Gs-DEBUG: GsApp:
	kind:	normal
	id-kind:	desktop
	state:	installed
	id:	seahorse.desktop
	name:	Passwords and Keys
	version:	3.10.2-1.fc20
	version-ui:	3.10.2
	summary:	Manage your passwords and encryption keys
	source-00:	seahorse
	source-id-00:	seahorse;3.10.2-1.fc20;x86_64;installed:updates
	rating:	100
	rating-confidence:	173
	rating-kind:	system
	pixbuf:	0x2832e80
	install-date:	1390953600
	history:	1
	{DataDir::desktop-filename}:	/usr/share/applications/seahorse.desktop
	{DataDir::desktop-icon}:	seahorse

(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::desktopdb(gs_plugin_refine)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::epiphany(gs_plugin_refine)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::datadir-filename(gs_plugin_refine)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::datadir-filename-local(gs_plugin_refine)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::datadir-apps(gs_plugin_refine)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::datadir-apps(refine:seahorse)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::appstream(gs_plugin_refine)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~appstream::refine
(gnome-software:12015): GsPlugin-DEBUG: no AppStream match for {pkgname} seahorse
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~GsPlugin::packagekit-refine(gs_plugin_refine)
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~packagekit-refine[name->id]
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~packagekit-refine[desktop-filename->id]
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~packagekit-refine[id->update-details]
(gnome-software:12015): Gs-DEBUG: run 0x2dceb20~packagekit-refine[source->licence]
(gnome-software:12015): PackageKit-DEBUG: role now get-details
**
Gtk:ERROR:gtkicontheme.c:2873:theme_lookup_icon: assertion failed: (suffix != ICON_SUFFIX_NONE)
Aborted (core dumped)
Comment 1 Richard Hughes 2014-02-25 14:10:12 UTC
I think this is a GTK bug, so reassigning. Backtrace looks like:

Gtk:ERROR:gtkicontheme.c:2865:theme_lookup_icon: assertion failed: (suffix != ICON_SUFFIX_NONE)

Program received signal SIGABRT, Aborted.
0x00007ffff468ac39 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
56	  return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig);
(gdb) bt
  • #0 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 56
  • #1 __GI_abort
    at abort.c line 89
  • #2 g_assertion_message
  • #3 g_assertion_message_expr
    at gtestutils.c line 2306
  • #4 theme_lookup_icon
    at gtkicontheme.c line 2865
  • #5 choose_icon
  • #6 gtk_icon_theme_lookup_icon_for_scale
  • #7 gtk_icon_theme_load_icon_for_scale
  • #8 gtk_icon_theme_load_icon
  • #9 gs_pixbuf_load
    at gs-utils.c line 272
  • #4 theme_lookup_icon
    at gtkicontheme.c line 2865
  • #5 choose_icon

in #5 this looks very suspicious: icon_name = 0x7fffa806e4c0 "\360( \250\377\177"

Ideas welcome. Thanks.
Comment 2 Richard Hughes 2014-02-25 14:43:42 UTC
My mistake. There was a race in the hash-deduplication in gnome-software and the icon loading in GTK, so large icons that took time triggered the crash. I've fixed this in gnome-software -- sorry for the noise.
Comment 3 Richard Hughes 2014-02-25 14:48:29 UTC
commit 6f4d6c8238bc267abd2d0adfb6e83695d989892c
Author: Richard Hughes <richard@hughsie.com>
Date:   Tue Feb 25 14:43:51 2014 +0000

    Warn when overwriting metadata keys that already exist
    
    Also, ignore setting an existing key with the same value as we're trying to set,
    we don't want the memory address to be changed for no reason.
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=723702