Warn when overwriting metadata keys that already exist

Also, ignore setting an existing key with the same value as we're trying to set,
we don't want the memory address to be changed for no reason.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=723702